--- a/src/index.css
+++ b/src/index.css
@@ -56,12 +56,18 @@ line-height: 90px;
 letter-spacing: 3px;
 }
 
-/* p{
+ .HeroText{
   color: white;
   font-size: 3rem;
   font-weight: 100;
   font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-} */
+
+  
+  @media screen and (max-width: 1024px) {  
+    font-size: 1.2rem;
+    text-align: center;
+}
+} 
 
 .ImageSection{
   /* width: 45vw; */
@@ -160,15 +166,23 @@ letter-spacing: 3px;
   @media screen and (max-width: 990px) {
       padding: 0;
     }
-  
-    
+
+    @media screen and (max-width: 600px) {
+      padding: 2rem;
+      gap: 0px;
+    }  
   
 }
 
 .listCard{
   display: flex;
   justify-content: space-between;
+  @media screen and (max-width: 600px) {
+    flex-direction: column;
+  }
 }
+
+
 
 
 .formSection{
@@ -178,6 +192,10 @@ letter-spacing: 3px;
   display: flex;
   justify-content: center;
   align-items: center;
+  @media screen and (max-width: 600px) {
+    padding: 0px;
+
+  }
 }
 
 .InputSection {
@@ -240,3 +258,48 @@ letter-spacing: 3px;
       display: none;
     }
 }
+
+.ListDotSection {
+
+  display: flex;
+  gap: 1rem;
+  align-items: center;
+
+  @media screen and (max-width: 600px) {
+    /* display: none; */
+    gap: 0px;
+  }
+}
+
+.ListDotSection .text {
+  color: rgba(255, 255, 255, 0.822);
+  font-size: 1.5rem;
+  @media screen and (max-width: 600px) {
+    font-size: 14px;
+    text-align: left;
+  }
+}
+
+.FormContentText {
+  width: 70%;
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+
+  @media screen and (max-width: 600px) {
+    width: 100%;
+  }
+}
+
+.DropDownHero { 
+  height: 'auto';
+  padding: 10rem;
+
+
+
+  @media screen and (max-width: 600px) {
+    height: auto;
+  }
+ 
+}
+
