--- a/src/Components/HomeMediaQueries.css
+++ b/src/Components/HomeMediaQueries.css
@@ -124,7 +124,7 @@ line-height: 15.14px;
 text-align: center;
 width: Fixed 96.71px;
 height: 25.82px;
-padding: 7.59px 29.37px 7.59px 29.37px;
+/* padding: 7.59px 29.37px 7.59px 29.37px; */
 gap: 5.06px;
 border-radius: 4.05px;
   }
