--- a/src/Components/contactus.css
+++ b/src/Components/contactus.css
@@ -153,7 +153,7 @@ line-height: 90px;
 letter-spacing: 3px;
     }
     .banner{
-      width: 690px;
+      width: 100%;
 height: 424px;
     }
     .sectionOne-left{
