Contact us page binding implemented.

--- a/src/Components/contactus.css
+++ b/src/Components/contactus.css
@@ -229,3 +229,11 @@ margin: 0px;
     }
 
   }
+
+  .error {
+    font-size: 12px;
+    color: white;
+    background: #ff5f5f;
+    padding: 0 5px;
+    border-radius: 3px;
+  }
